Bug 146913 - UI: Pivot Table Layout dialog is disposed when I switch to another libreoffice window
Summary: UI: Pivot Table Layout dialog is disposed when I switch to another libreoffic...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.4.0.3 release
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.4.0
Keywords: bibisected, regression
: 146378 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-01-22 08:23 UTC by Kevin Suo
Modified: 2023-06-06 14:09 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Suo 2022-01-22 08:23:12 UTC
Steps to Reproduce:

1. Create a new Calc window and a new Writer window.

2. In Calc, Type "A" in cell A1, "1" in cell A2, then Insert > Pivot Table, then click OK. Now you see the Pivot Table Layout dialog.

3. Switch to the Writer window; then try to switch back to the Pivot Table Layout window.

Current Result:
Pivot Table Layout window disappeared.

Expected Result:
Pivot Table Layout window should remain there after you have switched to another window.

Note: this dialog also disappears when you switch to another Calc window (i.e. switch between the same LO Component).

Version: 7.2.5.2 / LibreOffice Community
Build ID: 499f9727c189e6ef3471021d6132d4c694f357e5
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: zh-CN (zh_CN.UTF-8); UI: zh-CN
Calc: threaded
Fedora 34, Gnome 40.5, x11.
Comment 1 Kevin Suo 2022-01-22 09:17:01 UTC
Also reproducible on Win7.

It works OK *before* the following commit:

commit f82356d9a1ce1457593a5f42728e2962561328cf
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Mon Apr 29 13:13:23 2019 +0100
    weld ScPivotLayoutDialog

After that commit, there is a crash when switching between windows.

This crash was fixed by:
commit 7364a206a67f73513590fbb55e9e1d630c97aab1
Author: Noel Grandin <noel.grandin@collabora.co.uk>
Date:   Thu Oct 24 08:43:59 2019 +0200
    tdf#128077 crash with calc dialogs and multiple windows

It is not possible to test if *this* bug exists between f82356d9a1ce1457593a5f42728e2962561328cf..7364a206a67f73513590fbb55e9e1d630c97aab1 (due to the crash).

However, *this* bug does exist *after* 7364a206a67f73513590fbb55e9e1d630c97aab1.

Adding Noel Grandin and Caolán McNamara to cc: would you please take a look? Thanks.
Comment 2 raal 2022-01-22 12:12:01 UTC
confirm Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: bd5492275d31f59b1d269205018d1487af52426f
CPU threads: 4; OS: Linux 5.11; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded Jumbo
Comment 3 Caolán McNamara 2022-01-24 16:30:22 UTC
more mine than Noels's anyway
Comment 4 Commit Notification 2022-01-24 19:39:47 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6c5c6ede0103e15b8e8ac432f0ca7f6e00c9dcb4

tdf#146913 don't destroy the dialog if we just want to hide it

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Kevin Suo 2022-01-25 02:07:58 UTC
Verified fixed on master.

As a reminder, this also affects 7.3 and 7.2 branch, thus backport is needed.
Comment 6 Roman Kuznetsov 2022-01-27 13:19:06 UTC
*** Bug 146378 has been marked as a duplicate of this bug. ***