tdf#146913 don't destroy the dialog if we just want to hide it

Change-Id: Ie534aba915120d12e65aa965e5435bc7575ecb29
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/128879
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154511
Tested-by: Gabor Kelemen <kelemeng@ubuntu.com>
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>