sc/source/ui/inc/validate.hxx
@@ -176,13 +176,13 @@ public:
 
     void            SetModal(bool bModal) { m_xDialog->set_modal(bModal); }
 
-    virtual void            SetReference( const ScRange& rRef, ScDocument* pDoc ) override
+    virtual void EndDialog(int nResponse) override;
+
+    virtual void SetReference( const ScRange& rRef, ScDocument* pDoc ) override
     {
         if ( m_pHandler && m_pSetReferenceHdl )
             (m_pHandler->*m_pSetReferenceHdl)( rRef, pDoc );
     }
-
-    virtual void EndDialog() override;
 
     virtual void            SetActive() override
     {
